@@ -40,11 +40,6 @@ A list of all bugs open for the next v3.0.4 release can be found at
   http://s.apache.org/ts-3.0.4
 
 PATCHES ACCEPTED TO BACKPORT FROM TRUNK:
-  
-  *) Range requests that result in cache refresh give 200 status response with full contents
-   Trunk patch: http://svn.apache.org/viewvc?view=revision&revision=1181280
-   Jira: https://issues.apache.org/jira/browse/TS-824
-   +1: briang, zwoop, zym
 
 PATCHES PROPOSED TO BACKPORT FROM TRUNK:
   [ New proposals should be added at the end of the list ]
